feat: fixing ux snags
